--- a/AnimalEthics.ipynb
+++ b/AnimalEthics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqxjq7YiTpr2I7zM8nOqom",
+      "authorship_tag": "ABX9TyOqnrs2o/nb6zeht0J/7/WY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,29 +30,26 @@
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
-        "uploaded = files.upload()\n"
+        "uploaded = files.upload()\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 73
+          "height": 38
         },
         "id": "ehhzAkSYzubG",
-        "outputId": "9b583453-5dde-42c2-f633-b998b511e4e5"
+        "outputId": "7bb6efe4-a764-4881-e048-d355ee54b43d"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-47490b18-98f4-4409-958f-8d1099d3a949\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-fbdba569-b5dd-4682-b04d-53aa2201c9a5\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-47490b18-98f4-4409-958f-8d1099d3a949\">\n",
+              "     <output id=\"result-fbdba569-b5dd-4682-b04d-53aa2201c9a5\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -232,16 +229,13 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving Test2.docx to Test2 (5).docx\n"
-          ]
+          "metadata": {},
+          "output_type": "display_data"
         }
       ]
     },
@@ -253,10 +247,33 @@
         "# !pip install python-docx"
       ],
       "metadata": {
-        "id": "fgRAJmIC0D35"
+        "id": "fgRAJmIC0D35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "45a40e53-0d54-44a2-d1ee-655d1777b0bb"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting python-docx\n",
+            "  Downloading python-docx-0.8.11.tar.gz (5.6 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m12.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: lxml>=2.3.2 in /usr/local/lib/python3.10/dist-packages (from python-docx) (4.9.3)\n",
+            "Building wheels for collected packages: python-docx\n",
+            "  Building wheel for python-docx (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for python-docx: filename=python_docx-0.8.11-py3-none-any.whl size=184487 sha256=833116dd66d181c2ad5caa56e19257544fde45cf2edf03dd8fefc7dde5df7f7b\n",
+            "  Stored in directory: /root/.cache/pip/wheels/80/27/06/837436d4c3bd989b957a91679966f207bfd71d358d63a8194d\n",
+            "Successfully built python-docx\n",
+            "Installing collected packages: python-docx\n",
+            "Successfully installed python-docx-0.8.11\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -277,12 +294,79 @@
     {
       "cell_type": "code",
       "source": [
-        "document = Document('Test2 (5).docx')"
+        "document = Document('Test2 (1).docx')"
       ],
       "metadata": {
         "id": "yVgkxuu2fpbW"
       },
-      "execution_count": 90,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RDiMX37V_kV-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2.6\tAnimal Number Justification\n",
+        "i.\tIf a power calculation is applicable, detail below how the animal numbers are derived.\n"
+      ],
+      "metadata": {
+        "id": "LAddyP9U_odG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "table_data = []\n",
+        "\n",
+        "# Initialize a list to store the column names (header row)\n",
+        "column_names = []\n",
+        "\n",
+        "# Iterate through the tables in the document (assuming one table)\n",
+        "for table in document.tables:\n",
+        "    for i, cell in enumerate(table.rows[0].cells):\n",
+        "        column_name = cell.text.strip()\n",
+        "        column_names.append(column_name)\n",
+        "\n",
+        "    # Iterate through the rows (skip the header row)\n",
+        "    for row in table.rows[1:]:\n",
+        "        row_data = {}\n",
+        "        for i, cell in enumerate(row.cells):\n",
+        "            row_data[column_names[i]] = cell.text.strip()\n",
+        "        table_data.append(row_data)\n",
+        "\n",
+        "# Now, 'table_data' contains the table values organized as a list of dictionaries, with each dictionary representing a row\n",
+        "print(table_data)"
+      ],
+      "metadata": {
+        "id": "Z4TLObvp_rG4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "f9-VFwpD_rKA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Bs8z0V_5_rNZ"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -306,7 +390,7 @@
       "metadata": {
         "id": "_X2PxoI-fe1T"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,15 +418,9 @@
         "        i=1\n",
         "        for row in block.rows: #1\n",
         "            table_text=\"\"\n",
-        "\n",
-        "\n",
-        "\n",
         "            i=1\n",
         "            row_data = [] #list\n",
-        "\n",
         "            for cell in row.cells:#2\n",
-        "\n",
-        "\n",
         "              # row_data.append(\"Cell\")\n",
         "              i=i+1\n",
         "              # print(i, \" \",cell.text)\n",
@@ -380,7 +458,7 @@
         "id": "FRT-xk8My7gB",
         "outputId": "451f7413-51cd-40f3-fb6b-80c7a500aaab"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +509,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "table_text = ''\n",
         "table__text=''\n",
         "# Iterate through the tables in the document\n",
@@ -454,15 +531,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uleMPRt83Ger",
-        "outputId": "c84c2917-f5a2-400b-cae2-dd88b1029488"
+        "outputId": "65fb6cbc-ec12-4534-c24a-1d9c209d2f88"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "☒ The maintenance or improvement of human or animal welfare. \n",
+            "☒ Minor Conscious Intervention: No Anaesthesia (e.g. injections; leg-banding; blood sampling; fitting radio-collars; attaching transmitters with glue or tape; toe or ear clipping for identification purposes; implanting microchips without anaesthesia) \n",
+            "☒ Minor Procedures with Recovery (e.g. Organ biopsies; attaching radio-collars or\n",
+            "transmitters under anaesthesia; implanting microchips under anaesthesia; removing teeth; micro CT) \n",
+            "☒ Major Physiological Challenge (e.g. major infection; advanced oncogenesis, with or without metastases; environmental deprivation for extended periods) \n",
             "\n"
           ]
         }
@@ -508,7 +589,7 @@
         "id": "xx8O0fgc9o3G",
         "outputId": "a7b3493d-59c9-4096-b475-59457bc1679e"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,7 +631,7 @@
         "id": "fwgUtMqL9o6d",
         "outputId": "002e87fe-328f-45ac-8678-b1fd44a6b11d"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,92 +646,19 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "B5_7FwTe_v5d",
-        "outputId": "a57dee10-4488-4ac8-e59b-72bd0ceb1086"
+        "id": "B5_7FwTe_v5d"
       },
-      "execution_count": 85,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[{'Common Name': 'Mouse', 'Scientific Name': 'Mus musculus', 'Strain': 'C57Bl/6', 'Sex': 'M\\nand F'}]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "# for table in document.tables:\n",
-        "#   for column in table.columns:\n",
-        "#     row_data=[]\n",
-        "#     for cell in column.cells:\n",
-        "#       row_data.append(cell.text)\n",
-        "#       print(cell.text,end=\"\\t\")\n",
-        "#       print(\"hELLO\")\n",
-        "#       # my_dict['city'] = 'New York'\n",
-        "#     print(\"BB\\n\")\n",
-        "# print(\"\\t\".join(row_data))"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Uvvk-QCh13PE",
-        "outputId": "07d9fa5e-a32b-4626-829c-fb813716760b"
+        "id": "Uvvk-QCh13PE"
       },
-      "execution_count": 72,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Common Name\thELLO\n",
-            "\n",
-            "Mouse\thELLO\n",
-            "BB\n",
-            "\n",
-            "Scientific Name\thELLO\n",
-            "Mus musculus\thELLO\n",
-            "BB\n",
-            "\n",
-            "\n",
-            "Strain\thELLO\n",
-            "\n",
-            "C57Bl/6\thELLO\n",
-            "BB\n",
-            "\n",
-            "\n",
-            "Sex\thELLO\n",
-            "M\n",
-            "and F\thELLO\n",
-            "BB\n",
-            "\n",
-            "Age or Size\thELLO\n",
-            "\n",
-            "7 weeks\thELLO\n",
-            "BB\n",
-            "\n",
-            "Total number\n",
-            "for duration of project\thELLO\n",
-            "\n",
-            "528\thELLO\n",
-            "BB\n",
-            "\n",
-            "Explanation if\n",
-            "total number is unknown\thELLO\n",
-            "\thELLO\n",
-            "BB\n",
-            "\n",
-            "Explanation if\n",
-            "total number is unknown\t\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
